--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+CairoSVG==1.0.7
 Django==1.6.5
 South==1.0
 boto==2.29.1
+cairocffi==0.5.4
+cffi==0.8.2
 dj-database-url==0.3.0
 django-crispy-forms==1.4.0
 django-herokuapp==0.9.18
@@ -8,6 +11,7 @@ django-require==1.0.6
 django-require-s3==1.0.0
 django-storages==1.1.8
 psycopg2==2.5.3
+pycparser==2.10
 pytz==2014.4
 sh==1.09
 waitress==0.8.9
